@@ -34,90 +34,84 @@ upstream issue periodically; when fixed, drop the task and the `dependsOn`.
 
 Each of these was observed and verified during the plan's phases but fell outside their scope. Newest concern first.
 
-### B13 — the fish and PowerShell template changes are unverified by execution — **DONE 2026-07-31**
-Phase 1 and its follow-up changed three decisions in **all three** start-script templates (Forge launcher era, the
-NeoForge 1.20 installer coordinate, and dropping `-Djava.security.manager=allow` on Java 24+). Only **bash** had been
-verified by running the extracted functions; `.fish` and `.ps1` were changed by analogy.
+### B21 — eight template paths are captured at construction and do not follow a changed home directory
+Found while withdrawing audit finding L-C (2026-07-31). `PathsConfig` resolves 31 of its properties through a
+re-deriving getter (`var x = …; get() { field = …; return field }; private set`) precisely so they track a home
+directory that changes at runtime — `serverFilesDirectory` (`:573-578`) does this on top of `homeDirectory`,
+which **this branch made re-resolve on every access**.
 
-Closed by running `ScriptTemplateMatrixIT` over `1.16.1,1.20.1,26.2` x `Forge,NeoForge,Fabric` x `bash,fish`
-(`SPC_GRINDER_TEMPLATE_WORKERS=1`, 23 min): **16 of 18 boot cells reached the vanilla ready-line, bash == fish in every
-single cell**, plus both PowerShell tests (own-parser parse of both `.ps1` templates, and executing the shipped
-`RunInstallerJavaCommand` for the installer-JDK fallback *and* override). The Java-24+ guard was confirmed on a real
-Java 25 boot rather than by inspection: `SSJ Forge Args: -Djava.security.manager=allow` is echoed while the emitted
-`Run Command` omits it. **Note the default dimensions cover no `26.x` version** — pass `SPC_GRINDER_TEMPLATE_MC`
-explicitly, or the new-scheme branch that motivated Phase 1 is never executed.
+The eight script-template properties do not (`PathsConfig.kt:586`, `:594`, `:603`, `:611`, `:619`, `:627`,
+`:635`, `:643`):
 
-The two failures were the same cell in both shells and are recorded as B19 (a real Forge-26.x defect) and B20 (the
-silent N/A that hid it for a whole run).
+```kotlin
+val defaultShellScriptTemplate = File(serverFilesDirectory, "default_template.sh")   // evaluated once
+```
 
-### B14 — `HostProcessServerRunner` still spends a boot's budget while the host is asleep
-B9 fixed the wall-clock deadline in `DockerJavaContainerEngine`, but `ServerRunner.kt:114-118` has the identical
-`System.currentTimeMillis()` deadline for the **host-process** runner — the path the app's `-verifyclientside` CLI verb
-uses. A suspend there still writes off a boot that never got its time. The fix is the same shape as B9's
-(`isSuspendGap` is already pure and could simply be shared), and the reason it was not done with B9 is only that the
-grinder was the observed victim.
+They are plain `val`s evaluated at construction, so after a home change (`--home`, the `-D` override, or the
+GUI's settings panel) they still point into the **old** home while everything around them has moved. These feed
+`defaultStartScriptTemplates()` / `defaultJavaScriptTemplates()`, so the consequence is generation reading
+templates from a directory the user has left behind — silent, and it looks like "my template edits do nothing".
 
-### B15 — the loader-cache marker records success, not which template produced it
-Phase 1 had to invalidate two cached Forge tuples **by hand**: the install boot runs the same start-script templates, so
-those layers had been produced by the buggy legacy branch (no `server.jar`), and `LoaderCache`'s completion marker made
-`ensureInstalled` serve them regardless. Any future template change that alters what an install *produces* has the same
-problem, and nothing warns. Option: record a hash of the templates (or SPC's version) in the marker and treat a
-mismatch as a miss. Cheap to do, and it removes a manual step nobody will remember.
+Not fixed with the audit finding because it predates this range, spans eight properties, and needs its own pin:
+a test that changes the home mid-instance and asserts the template paths follow. The fix is either the
+re-deriving getter the other 31 use, or a computed `val … get() =`, which is the cleaner Kotlin and behaviour-
+identical (the field write in that pattern is dead — the getter recomputes unconditionally).
 
-### B16 — the checked-in test properties still carry machine-specific absolute paths
-The audit's M1 had two halves. The suite no longer *rewrites*
-`serverpackcreator-{api,clientside}/src/test/resources/serverpackcreator.properties` (fixed 2026-07-31), but they are
-still committed containing absolute paths from one developer's machine — `de.griefed.serverpackcreator.java=/Users/…/
-sdkman/…` and `server.tomcat.basedir=/Users/…`. Harmless while only that machine runs them; misleading for anyone else
-and meaningless in CI. Either relativise them or generate them into `build/` at test time.
+### B22 — the grinder writes `serverpackcreator.properties` and `log4j2.xml` into the repository root on every start
+Observed 2026-07-31 while restoring the sweep. Both files appear untracked in the repo root seconds after the
+daemon starts, and stay gone when it is stopped — verified by stopping it, deleting them, and waiting: nothing
+reappears, so the daemon is the writer.
 
-### B17 — `.gitignore` hides new files under `server_files`
-`.gitignore:365` ignores `server_files` wholesale, so the shipped templates are tracked only because they predate the
-rule. Adding `variables.txt` in Phase 3 needed `git add -f`, and the next shipped resource will be silently untracked
-unless somebody remembers — a packaging bug that only shows up as a file missing from a release. Narrow the rule (ignore
-the *home* directory's `server_files`, not the resource path) or add explicit negations for the tracked resources.
+Neither obvious lever changes it:
 
-### B18 — an install failure's console is destroyed by the next attempt on that tuple
-`DockerLoaderInstaller` streams the install console to `work/install/<tuple>/install.log`, which correctly survives the
-pack cleanup — but `VanillaPackGenerator.generate` wipes the whole tuple directory at the start of the next attempt, so
-the failing run's log is gone exactly when a retry makes you want to compare the two. The failure warning does embed the
-container's last 25 lines (which is what made Phase 1's Java 24 diagnosis possible at all), so this is a convenience
-gap rather than a blind spot: keep the previous log as `install.log.previous`, or write it under the tuple's cache entry
-instead.
+- its working directory was **verified** to be `~/.spc-grinder` (via `lsof -d cwd`), so this is not the
+  CWD-relative default of `ApiWrapper.api()` (`GrinderApplication.kt:85`);
+- pointing `SPC_GRINDER_SPC_PROPERTIES` at `~/.spc-grinder/serverpackcreator.properties` (the path
+  `GrinderApplication.kt:84` honours) makes it *read* from there but it still writes the pair into the repo root.
 
-### B19 — a fresh Forge pack on Minecraft 26.x installs and exits 0 without ever launching the server
-Found by `ScriptTemplateMatrixIT` on 2026-07-31: `Forge 26.2` failed in **both** bash and fish while every other cell
-passed. Not a shell port and not the Java-25 guard — a controlled comparison isolates it to Forge-on-26.x alone:
+**The test suite is ruled out as the producer**, which is the natural first suspicion since it *was* the cause of
+this class of pollution before 2026-07-31: a full module test run now leaves the repository root untouched,
+because `serverpackcreator.java-conventions.gradle.kts:44` pins every module's test home to `<module>/tests`.
+Confirmed by running a suite with the root clean and re-checking `git status`. Only the daemon reproduces it, and
+only at startup — the pair can be deleted while it runs and does not come back until the next start.
 
-| cell (fresh pack, `USE_SSJ=true`) | Java | installer ran | server launched |
-|---|---|---|---|
-| Forge 1.20.1 | 17 | yes | **yes** |
-| NeoForge 26.2 | 25 | yes | **yes** |
-| Forge 26.2 | 25 | yes | **no** |
+Same class as the test-suite pollution fixed on 2026-07-31 (`ef3280e4c`/`e7cce83fb`) and the reason that one was
+worth fixing: artifacts landing outside the home a process was told to use. Consequence today is a permanently
+dirty `git status` while a sweep runs, which is how a genuinely unexpected file gets overlooked. Worth checking
+whether `ApiProperties`' log4j `ConfigurationFactory` role writes `log4j2.xml` relative to something captured at
+class-load rather than to the resolved home, since `log4j2.xml` is the more surprising of the two.
 
-On a fresh pack the ServerStarterJar runs Forge's installer, which prints `The server installed successfully` /
-`Exiting...`, and the process then **exits 0** with no world directory and no ready-line. Booting the *same* pack a
-second time reaches `Done (7.287s)! For help` — so it needs two invocations. The difference from the NeoForge branch is
-the argument: Forge passes a full installer **URL** (`--installer <url>`), NeoForge passes just the **version**
-(`--installer ${MODLOADER_VERSION}`) on anything past 1.20.x.
+### B23 — a failed Minecraft server-manifest fetch is never remembered, so every lookup retries it
+Found by the fourth audit (2026-07-31) while reducing the log volume that finding introduced.
+`MinecraftServer.setServerJson()` re-downloads whenever `manifestFile` is absent and, on failure, leaves
+`serverJson` null — so the next call tries again. `MinecraftMeta.getServer` (`:166`) then evaluates
+`server.url().isPresent && server.javaVersion().isPresent`, and **both** call it: one `requiredJavaVersion`
+lookup on a version whose manifest cannot be fetched costs **two** download attempts.
 
-Why it has not been seen in the sweep: the grinder pre-bakes the install and then boots offline from the loader cache,
-so it always boots on an already-installed tuple (`26.2/Forge/65.1.0` installed fine at 09:27 that day). A **user**
-running `start.sh` on a fresh Forge 26.x pack hits it directly — the server appears to do nothing and quit.
-Exit code 0 also means `BootLogClassifier` cannot tell this from a clean shutdown. Confirm whether the launch-vs-install
-split is SSJ behaviour or the URL form before changing anything, and pin it with a failing cell first.
+That lookup is hot: `ImageJavaRuntimes.requiredJavaMajor` reaches it from `supportFor`, `javaPath` and
+`installerJavaPathFor` — per candidate in `ContainerCandidateVerifier`, per cell in `ScriptTemplateMatrixIT`, and
+from the GUI on every version selection (`ConfigEditor.kt:681`). So a single unfetchable version can generate
+network attempts in proportion to catalogue size, silently.
 
-### B20 — a missing per-version Minecraft manifest silently becomes "N/A", deleting matrix coverage
-`MinecraftServer.javaVersion()` wraps its body in `catch (e: Exception) -> Optional.empty()`, and `getServer()` requires
-both `url()` and `javaVersion()` to be present, swallowing anything else. So a per-version json that is absent and fails
-to download is indistinguishable from "this version declares no Java". `ImageJavaRuntimes.supports()` maps that to
-`false`, and `ScriptTemplateMatrixIT` then reports the cell as `[N/A] SKIPPED` with the reason "loader has no build for
-Minecraft X (or its JDK is not bundled)" — which reads as a legitimate exclusion.
+The logging is now `debug` and message-only, so the *symptom* is gone; the retry is not. The fix is to remember the
+failure per instance (a resolved-or-null cache, so a miss is answered from memory) and it wants a pin — which needs
+a download seam `MinecraftServer` does not currently have, since it constructs its own fetch through `utilities`.
+That seam is the actual work, and the reason this is an entry rather than a same-day fix. **Note the exported
+`Optional` contract must not change:** callers read empty as "no server available", and B20's consumer-side
+distinction (`ImageSupport.REQUIREMENT_UNKNOWN`) already depends on that shape.
 
-Observed on 2026-07-31: the first matrix run skipped **all four 26.2 cells**, including Fabric, which the sweep boots
-fine. Cause was first-run staleness — `VersionMeta` refreshed the manifest *during* setup, after the in-memory server
-map had been built, so `26.2` was missing from the map while present in the file on disk. The second run picked it up
-and all three loaders became valid. A silent N/A on the newest Minecraft version is the worst possible place for this:
-the run still reports green while skipping exactly the new-scheme branch the templates were fixed for. At minimum the IT
-should distinguish "loader genuinely has no build" from "this Minecraft version's Java requirement is unknown" and be
-loud about the second; the swallow in `javaVersion()` should also not hide a failed download.
+### B24 — every test run wipes `<module>/tests`, so cached version metadata never survives a run
+Found 2026-07-31 while removing the build's shared-Preferences writes. `java-conventions`' `cleanup()` runs in
+`doFirst` of both `test` and `clean` and deletes everything under `<module>/tests` except `.gitkeep`. Since that
+directory is now also each module's SPC **home**, the deletion takes the version manifests and the per-version
+`mcserver/*.json` cache with it, every run.
+
+**This explains B20's disappearing metadata.** `26.2.json` had to be seeded by hand to get the Forge proof, and it
+vanished again between runs — not deleted by `VersionMeta`, but by the build's own pre-test cleanup. It also means
+`ScriptTemplateMatrixIT`'s first run after any `clean`/`test` starts from an empty metadata cache, which is when the
+newest Minecraft versions are most likely to resolve as `REQUIREMENT_UNKNOWN`.
+
+It further contradicts the root `CLAUDE.md` claim that the api suite needs **no live network** because "version
+manifests are cached": with the cache wiped before every run, the suite re-fetches them. Worth measuring — run the
+api suite with networking blocked and see what fails — before deciding whether the clean-slate guarantee or the
+offline guarantee is the one to keep. Both are defensible; they cannot both be true as written.
